--- a/goodwebsite2.html
+++ b/goodwebsite2.html
@@ -32,7 +32,7 @@
 
 
 
-<a href="https://github.com/150704065/-website/blob/main/good%20website%203.html"> page 3 </a>
+<a href="goodwebsite3.html"> page 3 </a>
   
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRbjGuluzHtDr5nSpD8BSOQXxAPI65XeOiKA&usqp=CAU">
 
